trunk/Archive2/33/7715a86a9415c2/output
main.cpp:22:11: error: no member named 'baz' in 'A<3>'
        x.baz();
        ~ ^
main.cpp:26:17: note: in instantiation of member function 'Foo<A<1>, A<2>, A<3> >::bar' requested here
template struct Foo<A<1>, A<2>, A<3>>;
                ^
1 error generated.
